feat: add types to inputs

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
       <div class="controls" role="form">
         <div class="control">
           <label for="start_at">Start at</label>
-          <input name="start_at" value="0" id="start_at" aria-labelledby="start_at_label" />
+          <input name="start_at" type="number" value="0" id="start_at" aria-labelledby="start_at_label" />
         </div>
         <div class="control">
           <label for="step">Step</label>
-          <input name="step" value="1" id="step" aria-labelledby="step_label" />
+          <input name="step" type="number" value="1" id="step" aria-labelledby="step_label" />
         </div>
       </div>
       <button class="count_button" aria-live="polite">
